Fixed overlap in search form when we have long location names.

--- a/dataox/equipment/static/equipment/css/large.css
+++ b/dataox/equipment/static/equipment/css/large.css
@@ -42,7 +42,7 @@ body.equipment-browse ul.equipment-categories ul {
 .searchTips {
 float: left; 
 clear: none;
-width: 300px;
+width: 400px;
 }
 
 .searchTips {
