--- a/dataox/equipment/static/equipment/css/medium.css
+++ b/dataox/equipment/static/equipment/css/medium.css
@@ -45,7 +45,7 @@ body.equipment-browse ul.equipment-categories ul li a{
 .searchTips {
 float: left; 
 clear: none;
-width: 300px;
+width: 400px;
 }
 
 .searchTips {
